Update connection string for PostgreSQL configuration

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": null,
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Port=5432;Database=YourDatabaseName;Username=YourUsername;Password=YourPassword"
+  }
 }
