Initialize full database structure with entities and relationships

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": null,
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=YourDatabaseName;Username=YourUsername;Password=YourPassword"
+    "PostgresConnection": "Host=localhost;Port=4200;Database=MyMuseumParis;Username=postgres;Password=12345678"
   }
 }
