11 configure database connection and create basic db structure (#12)
* Update connection string for PostgreSQL configuration

* Initialize full database structure with entities and relationships

* Fixed Errors

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": null,
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Port=4200;Database=MyMuseumParis;Username=postgres;Password=12345678"
+  }
 }
