Commit before upcoming migrations

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": null,
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=4200;Database=MyMuseumParis;Username=postgres;Password=12345678"
+    "PostgresConnection": "Server=localhost; Port=5432; Database=MyMuseumParis; User Id=postgres; Password=12345678"
   }
 }
