--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "PostgresConnection": "Server=localhost; Port=5432; Database=MyMuseumParis; User Id=postgres; Password=12345678"
+    "PostgresConnection": "Server=localhost; Port=5432; Database=MyMuseumParis; User Id=postgres; Password=12345678; Include Error Detail=true"
   }
 }
