11 configure database connection and create basic db structure (#13)
* Update connection string for PostgreSQL configuration

* Initialize full database structure with entities and relationships

* Fixed Errors

* Updated database representation before intial migration

* Created initial database migraiton

* Commit before upcoming migrations

* Updated DTOs

* Updated entities to have the correct representations

* Updated the database to use snake case convention for database entries

* Updated MuseumService to use the repository layer
Registered Museum repository and service to the DI

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresConnection": "Server=localhost; Port=5432; Database=MyMuseumParis; User Id=postgres; Password=12345678; Include Error Detail=true"
   }
 }
