--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,8 +23,7 @@
 
   <ItemGroup>
     <Folder Include="API\NewFolder\" />
-    <Folder Include="Application\DTOs\" />
-    <Folder Include="Application\Services\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
