Commiting before starting to implment UseCases

--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="API\NewFolder\" />
+    <Folder Include="API\DTOs\Requests\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
